objects/ssot__CourseOfferingSchedule__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CourseOfferingId__c</fullName>
        <label>Course Offering</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__CourseOfferingScheduleTmplId__c</fullName>
        <label>Course Offering Schedule Template</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DescriptionText__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__EndTime__c</fullName>
        <label>End Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Course Offering Schedule Id</label>
        <length>36</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnFriday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnMonday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnSaturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnSunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnThursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnTuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__IsOfferedOnWednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Offered On Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__RecurrencePattern__c</fullName>
        <label>Recurrence Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__StartTime__c</fullName>
        <label>Start Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719820265049_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CourseOfferingSchedule_CourseOfferin_rel</label>
        <referenceTo>ssot__CourseOfferingScheduleTmpl__dlm</referenceTo>
        <relationshipLabel>CourseOfferingSchedule_CourseOfferin_rel</relationshipLabel>
        <relationshipName>rel_1719820265049_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>